# crocus-brass

./: .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: main.cpp
server/: CMakeLists.txt
server/include/: Server.h
server/src/: Server.cpp  main.cpp
src/Client/: CMakeLists.txt
src/Server/: CMakeLists.txt  main.cpp
